name:                Queueing
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/eggplantbren/Queueing#readme
license:             BSD3
license-file:        LICENSE
author:              Brendon J. Brewer
maintainer:          brendon.brewer@gmail.com
copyright:           (c) 2017 Brendon J. Brewer
category:            science
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       mwc-random,
                       primitive,
                       transformers,
                       vector
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

executable Main
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       mwc-random,
                       primitive,
                       Queueing
  default-language:    Haskell2010

test-suite Queueing-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Queueing
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/eggplantbren/Queueing
